# hw04-Group24

./: LOSC_Event_tutorial.html  Makefile  README.html  README.md  _toc.yml  conf.py  contribution_statement.html  contribution_statement.md  genindex.html  hw04_description.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  search.html  searchindex.js  updated_LOSC_Event_tutorial.html  updated_LOSC_Event_tutorial.ipynb
.doctrees/: LOSC_Event_tutorial.doctree  intro.doctree  markdown-notebooks.doctree  markdown.doctree  updated_LOSC_Event_tutorial.doctree
.github/workflows/: book.yml
_build/html/: .buildinfo  LOSC_Event_tutorial.html  README.html  contribution_statement.html  genindex.html  hw04_description.html  index.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  search.html  searchindex.js  updated_LOSC_Event_tutorial.html
_build/html/.doctrees/: LOSC_Event_tutorial.doctree  README.doctree  contribution_statement.doctree  environment.pickle  hw04_description.doctree  intro.doctree  markdown-notebooks.doctree  notebooks.doctree  updated_LOSC_Event_tutorial.doctree
_build/html/_sources/: README.md  updated_LOSC_Event_tutorial.ipynb
_build/jupyter_execute/: markdown-notebooks.ipynb  notebooks.ipynb  updated_LOSC_Event_tutorial.ipynb
_sources/: README.md  contribution_statement.md
ligotools/: setup.cfg  utils.py
ligotools/test/: test_readligo.py  test_utils.py  tests_readligo.py
